Fix hero in Safari, adjust design screenshot on mobile

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -2,7 +2,8 @@
 
 :global {
     #hero-section {
-        @include flex($direction: row);
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         gap: 4rem;
         overflow: hidden;
         height: 75vh;
@@ -67,11 +68,14 @@
             margin: 0;
         }
     }
+    &container {
+        margin: auto;
+    }
     &screenshot {
         -webkit-user-drag: none;
         user-select: none;
-        height: 100%;
-        width: auto;
+        height: auto;
+        width: 100%;
         box-shadow: var(--window-elevation);
         background-color: var(--control-color-disabled);
         border: 1px solid var(--surface-stroke-default);
@@ -80,9 +84,9 @@
     }
 }
 
-@media only screen and (max-width: 1068px) {
+@media only screen and (max-width: 1024px) {
     :global(#hero-section) {
-        @include flex($direction: column);
+        grid-template-columns: 1fr;
         height: auto;
         max-height: unset;
     }
@@ -90,6 +94,9 @@
         &left {
             text-align: center;
             align-items: center;
+            .buttons-spacer {
+                justify-content: center;
+            }
         }
         &screenshot {
             -webkit-user-drag: none;
@@ -146,25 +153,32 @@
     }
 }
 
-@media only screen and (max-width: 1068px) {
+@media only screen and (max-width: 1024px) {
     .design-image {
+        margin-top: 120px;
         width: 100%;
     }
-    .files-screenshot {
-        top: 0;
+    .files- {
+        &screenshot {
+            top: 0;
+        }
+        &wallpaper {
+            width: 100%;
+        }    
     }
 }
 
 @media only screen and (max-width: 768px) {
     .files- {
         &screenshot {
-            width: 90%;
+            width: 100%;
             top: -72px;
             transform: none !important;
             border-radius: calc(var(--overlay-corner-radius) / 2);
         }
         &wallpaper {
-            width: 100%;
+            width: 170%;
+            left: -35%;
             border-radius: var(--overlay-corner-radius);
         }
     }
